# EADS_P2_TDD_testingRefactoring

./: Analizador.cpp  CMakeLists.txt  EntidadNombrada.h  Noticia.cpp  README.md  compile.sh  compileAndTest.sh  main.cpp  test.sh
data/: ES_stopList.txt  tuits.txt
data/news/: newC00001_001.ES.txt  newC00001_002.ES.txt  newC00001_003.ES.txt  newC00001_004.ES.txt  newC00001_005.ES.txt  newC00001_006.ES.txt  newC00001_008.ES.txt  newC00001_009.ES.txt  newC00002_001.ES.txt  newC00002_002.ES.txt  newC00002_003.ES.txt  newC00002_004.ES.txt  newC00002_005.ES.txt  newC00003_001.ES.txt  newC00003_002.ES.txt  newC00004_001.ES.txt  newC00004_002.ES.txt  newC00004_003.ES.txt  newC00005_001.ES.txt  newC00005_002.ES.txt  newC00005_003.ES.txt  newC00005_004.ES.txt  newC00006_001.ES.txt  newC00006_002.ES.txt  newC00006_003.ES.txt  newC00006_004.ES.txt  newC00006_005.ES.txt  newC00006_006.ES.txt  newC00006_007.ES.txt  newC00007_001.ES.txt  newC00007_002.ES.txt  newC00008_001.ES.txt  newC00008_002.ES.txt  newC00009_001.ES.txt  newC00009_002.ES.txt  newC00009_003.ES.txt  newC00009_004.ES.txt  newC00009_005.ES.txt  newC00010_001.ES.txt  newC00010_002.ES.txt  (+8 more)
data/news_json/: newC00001_001.ES.json  newC00001_002.ES.json  newC00001_003.ES.json
dataTests/: ES_stopList.txt  ES_stopList_test1.txt
dataTests/news/: newC00001_001.ES.txt
dataTests2/: ES_stopList.txt
dataTests2/news/: newC00001_001.ES.txt  newC00001_002.ES.txt  newC00001_003.ES.txt  newC00001_004.ES.txt
diagramasClases/: diagrama.uml
diagramasClases/lib/Analizador/: Agrupacion.uml  AgrupadorNoticias.uml  AgrupadorNoticiasInterface.uml  Analizador.uml  ConversorJson.uml  EntidadComposite.uml  Noticia.uml  NoticiaInterface.uml  NoticiaLocal.uml  NoticiaVisitor.uml  NoticiasBuilder.uml  NoticiasBuilderInterface.uml  NoticiasJsonBuilder.uml  PalabrasReservadas.uml  PalabrasReservadasInterface.uml  SalvadorDeAgrupaciones.uml  SalvadorDeAgrupacionesJson.uml  Tuit.uml  TuitsJsonBuilder.uml  analizadorFull.uml
lib/: CMakeLists.txt
lib/Analizador/: Agrupacion.h  AgrupadorNoticias.cpp  AgrupadorNoticias.h  AgrupadorNoticiasInterface.h  Analizador.cpp  Analizador.h  CMakeLists.txt  ConversorJson.cpp  ConversorJson.h  EntidadComposite.cpp  EntidadComposite.h  EntidadNombrada.cpp  Noticia.cpp  Noticia.h  NoticiaInterface.h  NoticiaLocal.cpp  NoticiaLocal.h  NoticiaVisitor.h  NoticiasBuilder.cpp  NoticiasBuilder.h  NoticiasBuilderInterface.h  NoticiasJsonBuilder.cpp  NoticiasJsonBuilder.h  PalabrasReservadas.cpp  PalabrasReservadas.h  PalabrasReservadasInterface.h  SalvadorDeAgrupaciones.h  SalvadorDeAgrupacionesJson.cpp  SalvadorDeAgrupacionesJson.h  Tuit.cpp  Tuit.h  TuitsJsonBuilder.cpp  TuitsJsonBuilder.h
lib/Utils/: CMakeLists.txt  FileLineIterator.h  LineWordIterator.h
lib/jsoncpp/: CMakeLists.txt
tests/: AgrupadorNoticiasMock.h  CMakeLists.txt  LineWordIteratorTest.cpp  NoticiaMock.h  TestConversorJson.cpp  TestTuit.cpp  TestsAgrupador.cpp  TestsAnalizador.cpp  TestsBasicos.cpp  TestsEntidadComposite.cpp  TestsEntidadNombrada.cpp  TestsNoticia.cpp  TestsPalabrasReservadas.cpp
